// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`kbd > commonShortcuts 1`] = `
<div>
  <div
    class="flex flex-col gap-3"
  >
    <div
      class="flex items-center gap-2 text-xs text-muted-foreground"
    >
      Save
      <kbd
        class="inline-flex items-center gap-1"
        data-slot="kbd-group"
      >
        <kbd
          class="pointer-events-none inline-flex h-5 w-fit min-w-5 items-center justify-center gap-1 rounded-xs bg-muted px-1 font-sans text-[0.625rem] font-medium text-muted-foreground select-none [&_svg:not([class*='size-'])]:size-3"
          data-slot="kbd"
        >
          ⌘
        </kbd>
        <kbd
          class="pointer-events-none inline-flex h-5 w-fit min-w-5 items-center justify-center gap-1 rounded-xs bg-muted px-1 font-sans text-[0.625rem] font-medium text-muted-foreground select-none [&_svg:not([class*='size-'])]:size-3"
          data-slot="kbd"
        >
          S
        </kbd>
      </kbd>
    </div>
    <div
      class="flex items-center gap-2 text-xs text-muted-foreground"
    >
      Run query
      <kbd
        class="inline-flex items-center gap-1"
        data-slot="kbd-group"
      >
        <kbd
          class="pointer-events-none inline-flex h-5 w-fit min-w-5 items-center justify-center gap-1 rounded-xs bg-muted px-1 font-sans text-[0.625rem] font-medium text-muted-foreground select-none [&_svg:not([class*='size-'])]:size-3"
          data-slot="kbd"
        >
          ⌘
        </kbd>
        <kbd
          class="pointer-events-none inline-flex h-5 w-fit min-w-5 items-center justify-center gap-1 rounded-xs bg-muted px-1 font-sans text-[0.625rem] font-medium text-muted-foreground select-none [&_svg:not([class*='size-'])]:size-3"
          data-slot="kbd"
        >
          ↵
        </kbd>
      </kbd>
    </div>
    <div
      class="flex items-center gap-2 text-xs text-muted-foreground"
    >
      Command palette
      <kbd
        class="inline-flex items-center gap-1"
        data-slot="kbd-group"
      >
        <kbd
          class="pointer-events-none inline-flex h-5 w-fit min-w-5 items-center justify-center gap-1 rounded-xs bg-muted px-1 font-sans text-[0.625rem] font-medium text-muted-foreground select-none [&_svg:not([class*='size-'])]:size-3"
          data-slot="kbd"
        >
          ⌘
        </kbd>
        <kbd
          class="pointer-events-none inline-flex h-5 w-fit min-w-5 items-center justify-center gap-1 rounded-xs bg-muted px-1 font-sans text-[0.625rem] font-medium text-muted-foreground select-none [&_svg:not([class*='size-'])]:size-3"
          data-slot="kbd"
        >
          K
        </kbd>
      </kbd>
    </div>
  </div>
</div>
`;

exports[`kbd > default 1`] = `
<kbd
  class="pointer-events-none inline-flex h-5 w-fit min-w-5 items-center justify-center gap-1 rounded-xs bg-muted px-1 font-sans text-[0.625rem] font-medium text-muted-foreground select-none [&_svg:not([class*='size-'])]:size-3"
  data-slot="kbd"
>
  ⌘
</kbd>
`;

exports[`kbd > group 1`] = `
<div>
  <kbd
    class="inline-flex items-center gap-1"
    data-slot="kbd-group"
  >
    <kbd
      class="pointer-events-none inline-flex h-5 w-fit min-w-5 items-center justify-center gap-1 rounded-xs bg-muted px-1 font-sans text-[0.625rem] font-medium text-muted-foreground select-none [&_svg:not([class*='size-'])]:size-3"
      data-slot="kbd"
    >
      ⌘
    </kbd>
    <kbd
      class="pointer-events-none inline-flex h-5 w-fit min-w-5 items-center justify-center gap-1 rounded-xs bg-muted px-1 font-sans text-[0.625rem] font-medium text-muted-foreground select-none [&_svg:not([class*='size-'])]:size-3"
      data-slot="kbd"
    >
      K
    </kbd>
  </kbd>
</div>
`;

exports[`kbd > withText 1`] = `
<kbd
  class="pointer-events-none inline-flex h-5 w-fit min-w-5 items-center justify-center gap-1 rounded-xs bg-muted px-1 font-sans text-[0.625rem] font-medium text-muted-foreground select-none [&_svg:not([class*='size-'])]:size-3"
  data-slot="kbd"
>
  Enter
</kbd>
`;
